# picogl

./: .gitignore  MOLECULAR_VISUALIZATION_GUIDE.md  Pipfile  README.md  pyproject.toml  requirements.txt
examples/: 2VUG.molviewspec  2VUG_picogl.json  2VUG_summary.txt  README_MOLECULAR.md  USAGE_GUIDE.md  __init__.py  cube.py  data.py  demo_pdb_molviewspec.py  example.molviewspec  example_picogl.json  example_summary.txt  molecular_viewer.py  object_renderer.py  pdb_picogl_simple.py  pdb_picogl_viewer.py  picogl_data_summary.json  picogl_window.py  read_picogl_data.py  read_picogl_data_simple.py  shader.py  simple_molecular_data.json  teapot.py  texture.py  texture_renderer.py  tu_01_color_cube.py  tu_02_texture_without_normal.py
examples/glsl/cube/: fragment.glsl
examples/glsl/cube2/: fragment.glsl  vertex.glsl
examples/utils/: ABC_window.py  MVPControl.py  glutWindow.py  glut_window.py  meshViewer.py  objLoader.py  pdb_loader.py  shaderLoader.py  test_window.py  textureLoader.py  uv2d.py  worldsheet.py
picogl/: __init__.py  error.py  frame.py  info.py  logger.py  normals.py  project.py  safe.py  surface_format.py
picogl/buffers/: abstract.py  attributes.py  base.py  glcleanup.py  upload.py
picogl/renderer/: __init__.py  base.py  glcontext.py  gldata.py  meshdata.py  object.py  texture.py  uvrenderer.py
picogl/shaders/: compile.py  generate.py  load.py  manager.py  matrix.py  mvp.py  registry.py  shader_uniform.py  type.py  uniform.py  use.py
picogl/ui/: abc_window.py
picogl/utils/: gl_init.py  glut.py  normal.py  reshape.py  texture.py
(+102 files in other folders)
